# SIMD_tools

./: .gitignore  LICENSE  README.md  assert_data.h  build_neon.sh  cfl.c  cfl.h  cfl_neon.c  cfl_test.c  gen_data.h  neon_print.h  simd_print.h  subavg_neon.c
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/barrbrain/simdtools/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
